# dont-track-me

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  pyproject.toml
.claude/skills/review/: skill.md
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: app_scanner.rs  db.rs  dns_monitor.rs  main.rs  models.rs  tracker_domains.rs
crates/dtm-cli/: Cargo.toml
crates/dtm-cli/src/: main.rs  output.rs
crates/dtm-core/: Cargo.toml
crates/dtm-core/src/: auth.rs  checklist.rs  config.rs  data.rs  db.rs  lib.rs  models.rs  module_trait.rs  paths.rs  platform.rs  report.rs  scoring.rs  tracker_domains.rs
crates/dtm-modules/: Cargo.toml
crates/dtm-modules/src/: lib.rs
crates/dtm-modules/src/ad_tracking/: auditor.rs  brokers.rs  mod.rs
crates/dtm-modules/src/app_permissions/: auditor.rs  mod.rs
crates/dtm-modules/src/app_scanner/: mod.rs  scanner.rs
crates/dtm-modules/src/certificates/: auditor.rs  mod.rs
crates/dtm-modules/src/cookies/: auditor.rs  mod.rs
crates/dtm-modules/src/dns/: auditor.rs  mod.rs
crates/dtm-modules/src/dns_monitor/: capture.rs  mod.rs
crates/dtm-modules/src/email/: auditor.rs  mod.rs
crates/dtm-modules/src/facebook/: mod.rs
crates/dtm-modules/src/fingerprint/: auditor.rs  mod.rs
crates/dtm-modules/src/headers/: auditor.rs  mod.rs
crates/dtm-modules/src/instagram/: mod.rs
crates/dtm-modules/src/location/: auditor.rs  mod.rs
crates/dtm-modules/src/metadata/: auditor.rs  mod.rs
crates/dtm-modules/src/reddit/: auditor.rs  client.rs  mod.rs  protector.rs  subreddits.rs
crates/dtm-modules/src/search_noise/: auditor.rs  mod.rs
crates/dtm-modules/src/secrets/: auditor.rs  mod.rs
crates/dtm-modules/src/social/: auditor.rs  mod.rs
crates/dtm-modules/src/social_noise/: auditor.rs  mod.rs
crates/dtm-modules/src/ssh/: auditor.rs  mod.rs
crates/dtm-modules/src/tiktok/: mod.rs
crates/dtm-modules/src/twitter/: mod.rs
crates/dtm-modules/src/webrtc/: auditor.rs  mod.rs
crates/dtm-modules/src/youtube/: auditor.rs  channels.rs  client.rs  mod.rs  protector.rs
shared/: README.md  email_trackers.yaml  social_trackers.yaml  tracker_cookies.yaml  tracker_domains.yaml  tracker_sdks.yaml
shared/checklists/: facebook.yaml  instagram.yaml  tiktok.yaml  twitter.yaml
shared/content/: ad_tracking.md  app_scanner.md  cookies.md  dns.md  dns_monitor.md  email.md  facebook.md  fingerprint.md  instagram.md  search_noise.md  secrets.md  youtube.md
shared/data/ad_tracking/: fr.yaml  us.yaml
shared/data/search_noise/: fr.yaml
shared/data/social_noise/: fr.yaml  us.yaml
shared/schema/: audit_result.schema.json  finding.schema.json  privacy_check.schema.json  protection_result.schema.json  scoring.yaml  threat_weights.yaml
src/dont_track_me/: __init__.py
src/dont_track_me/cli/: main.py
src/dont_track_me/core/: agent.py  auth.py  base.py  checklist.py  config.py  paths.py  registry.py  report.py  scoring.py
src/dont_track_me/modules/ad_tracking/: auditor.py  brokers.py  module.py  protector.py
src/dont_track_me/modules/app_permissions/: auditor.py  info.md  module.py  protector.py
src/dont_track_me/modules/certificates/: auditor.py  info.md  module.py  protector.py
src/dont_track_me/modules/cookies/: auditor.py  module.py  protector.py  trackers.py
src/dont_track_me/modules/dns/: auditor.py  module.py  protector.py
src/dont_track_me/modules/email/: auditor.py  module.py  protector.py  trackers.py
src/dont_track_me/modules/facebook/: auditor.py  checks.py  module.py  protector.py
src/dont_track_me/modules/fingerprint/: auditor.py  browsers.py  module.py  protector.py
src/dont_track_me/modules/headers/: auditor.py  info.md  module.py  protector.py
src/dont_track_me/modules/instagram/: auditor.py  checks.py  module.py  protector.py
src/dont_track_me/modules/location/: auditor.py  info.md  module.py  protector.py
src/dont_track_me/modules/metadata/: auditor.py  info.md  module.py  protector.py
src/dont_track_me/modules/reddit/: auditor.py  client.py  info.md  module.py  protector.py  subreddits.py
src/dont_track_me/modules/search_noise/: auditor.py  module.py  protector.py  queries.py
src/dont_track_me/modules/search_noise/data/: us.yaml
src/dont_track_me/modules/secrets/: auditor.py  module.py  protector.py
src/dont_track_me/modules/social/: auditor.py  info.md  module.py  protector.py  trackers.py
src/dont_track_me/modules/social_noise/: accounts.py  auditor.py  info.md  module.py  protector.py
src/dont_track_me/modules/ssh/: auditor.py  info.md  module.py  protector.py
src/dont_track_me/modules/tiktok/: auditor.py  checks.py  info.md  module.py  protector.py
src/dont_track_me/modules/twitter/: auditor.py  checks.py  info.md  module.py  protector.py
src/dont_track_me/modules/webrtc/: auditor.py  info.md  module.py  protector.py
src/dont_track_me/modules/youtube/: auditor.py  channels.py  client.py  module.py  protector.py
tests/: conftest.py
tests/test_core/: test_auth.py  test_checklist.py  test_registry.py  test_report.py
tests/test_modules/: test_ad_tracking.py  test_app_permissions.py  test_certificates.py  test_cookies.py  test_dns.py  test_email.py  test_facebook.py  test_fingerprint.py  test_headers.py  test_instagram.py  test_location.py  test_metadata.py  test_reddit.py  test_search_noise.py  test_secrets.py  test_social.py  test_social_noise.py  test_ssh.py  test_tiktok.py  test_twitter.py  test_webrtc.py  test_youtube.py
