[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dont-track-me"
version = "0.1.0"
description = "Modular anti-tracking toolkit — audit and protect your digital privacy"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dns = ["dnspython>=2.6"]
metadata = ["Pillow>=10.0", "pypdf>=4.0"]
all = ["dont-track-me[dns,metadata]"]
dev = [
    "dont-track-me[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[project.scripts]
dtm = "dont_track_me.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/dont_track_me"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
