[package]
name = "dtm-agent"
version = "0.1.0"
edition = "2021"
description = "Real-time privacy monitoring daemon for dont-track-me"

[[bin]]
name = "dtm-agent"
path = "src/main.rs"

[dependencies]
goblin = "0.9"
pcap = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
