[package]
name = "dtm-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
log = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
form_urlencoded = { workspace = true }
rand = "0.8"

# Optional OAuth dependencies
keyring = { version = "3", optional = true }
tiny_http = { version = "0.12", optional = true }
open = { version = "5", optional = true }

[features]
default = []
oauth = ["keyring", "tiny_http", "open"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
